More complex search and icon buttons

--- a/app/views/instrument/found_songs.html.erb
+++ b/app/views/instrument/found_songs.html.erb
@@ -1,4 +1,4 @@
-<h1> You are in found songs </h1>
+<h1> You are in found songs (Perfeccionad el método de búsqueda pls)</h1>
 <ul>
 <% @songs.each do |song| %>
 	<li><%= link_to(song.title, instrument_path(song)) %></li>
