--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -2,20 +2,20 @@
 <div>
 <%= form_tag({controller: "instrument", action: "index"}, {method: "get"}) do %>
 <%= hidden_field_tag(:instrument, "saxo") %> 
-<%= submit_tag('Saxofón', width:"100px") %>
+<%= image_submit_tag('/saxophone-icon.png', width:"100px") %>
 <% end %>
 <br>
 </div>
 <div>
 <%= form_tag({controller: "instrument", action: "index"}, {method: "get"}) do %>
 <%= hidden_field_tag(:instrument, "piano") %> 
-<%= image_submit_tag('/piano_henar.svg', width:"100px") %>
+<%= image_submit_tag('/g3088.png', width:"100px") %>
 <% end %>
 <br>
 </div>
 <div>
 <%= form_tag({controller: "instrument", action: "index"}, {method: "get"}) do %>
 <%= hidden_field_tag(:instrument, "guitar") %> 
-<%= submit_tag("Guitar") %>
+<%= image_submit_tag("/guitar.png", width:"100px") %>
 <% end %><br>
 </div>
