--- a/app/views/instruments/_instrument.html.erb
+++ b/app/views/instruments/_instrument.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to instrument.name, instrument_path(instrument) %></li>
+<li><div><button><%= link_to instrument.name, instrument_path(instrument) %></li></button></div>
