--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @instrument.name %> Songs</h1>
 <h1></h1>
+<%= form_tag({controller: "songs", action: "found_songs"}, {method: :post}) do %>
+<%= text_area_tag(:title,"", placeholder: "Buscar canción", size: "24x6") %>
+<%= submit_tag("Submit") %>
+<% end %>
 
 <ul>
 <% @songs.each do |song| %>
