Add default song and player

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @song.title %> </h1>
 
 <%= image_tag(@song.title+".jpg") %>
+<audio src="/songs/SSBB Main Theme.mp3" controls preload/>
+<!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
