--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,9 +3,5 @@
 <%= image_tag(@song.title+".jpg") %>
 <div><audio src="/songs/SSBB Main Theme.mp3" controls preload/></div>
 
-<div><video width="520" heigth="340" controls>
-	<source src="http://www.youtube.com/embed/PInuVXgxO1g" >
-</video>
-</div>
-<!-- <iframe width="854" height="510" src="//www.youtube.com/embed/PInuVXgxO1g" frameborder="0" allowfullscreen></iframe>	 -->
+<div><iframe width="854" height="510" src="//www.youtube.com/embed/PInuVXgxO1g" frameborder="0" allowfullscreen></iframe></div>
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
