--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,4 +1,7 @@
 <h1> MusicApp </h1>
+<% if flash[:notice] %>
+    <div class="notice"><%= flash[:notice] %></div>
+  <% end %>
 <ul>
 <%= render @instruments %>
 </ul>
