--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,3 +1,14 @@
-<%= form_for do |f| %>
-  <%= f.label :title %>
+<% if flash[:alert] %>
+<div class="alert"><%= flash[:alert] %></div>
 <% end %>
+
+<%= form_tag(controller: "songs", action: "create", method: "post") do %>
+<%= text_field_tag(:song_title,"", placeholder:"Song title...", size: "24x6") %>
+<%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
+<%= radio_button_tag(:song_category,"Classical") %><%= label_tag("Classical") %>
+<%= radio_button_tag(:song_category,"rock") %><%= label_tag("Rock") %>
+<%= radio_button_tag(:song_category,"jazz") %><%= label_tag("Jazz") %>
+<%= radio_button_tag(:song_category,"blues") %><%= label_tag("Blues") %>
+<%= submit_tag("Submit") %>
+<% end %>
+
