Form categories names changed

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,9 +6,9 @@
 <%= text_field_tag(:song_title,"", placeholder:"Song title...", size: "24x6") %>
 <%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
 <%= radio_button_tag(:song_category,"Classical") %><%= label_tag("Classical") %>
-<%= radio_button_tag(:song_category,"rock") %><%= label_tag("Rock") %>
-<%= radio_button_tag(:song_category,"jazz") %><%= label_tag("Jazz") %>
-<%= radio_button_tag(:song_category,"blues") %><%= label_tag("Blues") %>
+<%= radio_button_tag(:song_category,"Rock") %><%= label_tag("Rock") %>
+<%= radio_button_tag(:song_category,"Jazz") %><%= label_tag("Jazz") %>
+<%= radio_button_tag(:song_category,"Blues") %><%= label_tag("Blues") %>
 <%= submit_tag("Submit") %>
 <% end %>
 
