Tags added to seed

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,8 +6,8 @@
 	<% end %>	
 	<h1>Tags </h1>
 	<%= check_box(:song_tag1, "Cool", {}, 'Cool', "no") %> <%= label_tag("Cool") %>
-	<%= check_box(:song_tag2, "Long", {}, 'Long', "no") %> <%= label_tag("Long") %>
-	<%= check_box(:song_tag3, "Weird", {}, 'Weird', "no") %> <%= label_tag("Weird") %>
+	<%= check_box(:song_tag2, "Hard", {}, 'Hard', "no") %> <%= label_tag("Hard") %>
+	<%= check_box(:song_tag3, "Begginer", {}, 'Begginer', "no") %> <%= label_tag("Begginer") %>
 	<%= submit_tag("Submit") %>
 <% end %>
 
