--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,7 +1,25 @@
-<h1><%= @song.title %> </h1>
+<head>
+</head>
+<body>
+	<div class="row">
+          <div class="small-12 columns">
+			<h1><%= @song.title %> </h1>
+		  </div>
+	</div>	  	
 
-<%= image_tag(@song.title+".jpg") %>
-<div><audio src="/songs/SSBB Main Theme.mp3" controls preload/></div>
+	<div class="row">
+		<div class="small-3 columns">
+			<%= image_tag(@song.title+".jpg") %>
+		</div>
+		<div class="small-3 columns">
+			<audio src="/songs/SSBB Main Theme.mp3" controls preload />
+		</div>		
+		<div class="small-6 columns">
+			<iframe width="500px" height="300px" src="//www.youtube.com/embed/PInuVXgxO1g" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>	
 
-<div><iframe width="854" height="510" src="//www.youtube.com/embed/PInuVXgxO1g" frameborder="0" allowfullscreen></iframe></div>
+
+
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
+</body>
