css is better now

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -11,14 +11,16 @@
 		<div class="small-3 columns">
 			<%= image_tag(@song.title+".jpg") %>
 		</div>
-		<div class="small-3 columns">
-			<audio src="/songs/SSBB Main Theme.mp3" controls preload />
-		</div>		
-		<div class="small-6 columns">
+		
+		<div class="small-9 columns">
 			<iframe width="500px" height="300px" src="//www.youtube.com/embed/PInuVXgxO1g" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>	
-
+	<div class="row">
+		<div class="small-12 columns">
+			<audio src="/songs/SSBB Main Theme.mp3" controls preload />
+		</div>		
+	</div>	
 
 
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
