--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -1,24 +1,28 @@
 h1 {
 	margin: 0px;
+	margin-top: 30px;
 }
 img {
 	width: 200px;
 	height: 300px;
 	margin: 0px;
+	margin-top: 50px;
+	margin-left: 20px;
 
 }
 
 iframe {
-	/*width		:200px;
-	height		:150px;
-	position: absolute;*/
+	margin-top: 50px;
+	margin-right: 0px;
+	margin-left: 200px;
 
 }
 
 audio {
 	width: 300px;
 	height: 60px;
-	margin-top: 100px;
+	margin-top: 70px;
+	margin-left: 536px;
 }
 .row {
 	max-width: 99999px;
