Capitalize instruments names

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,7 +3,7 @@
 <body>
 	<div class="row">
           <div class="small-12 columns">
-			<h1><%= @song.title %> </h1>
+			<h1><%= @song.title.capitalize %> </h1>
 		  </div>
 	</div>	  	
 
