--- a/app/views/instruments/_instrument.html.erb
+++ b/app/views/instruments/_instrument.html.erb
@@ -1,1 +1,1 @@
-<li><div><button><%= link_to instrument.name, instrument_songs_path(instrument) %></button></div></li>
+<li><div><button><%= link_to instrument.name.capitalize, instrument_songs_path(instrument) %></button></div></li>
