--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -7,7 +7,7 @@ img {
 	height: 300px;
 	margin: 0px;
 	margin-top: 50px;
-	margin-left: 20px;
+	margin-left: 40px;
 
 }
 
@@ -21,12 +21,22 @@ iframe {
 audio {
 	width: 300px;
 	height: 60px;
-	margin-top: 70px;
+	margin-top: 25px;
 	margin-left: 536px;
+	padding-bottom: 10px;
 }
 .row {
 	max-width: 99999px;
 }
 body {
 	background-image: url(/images/music-wallpaper-colorful-abstract-wallpaper-music-picture-music-wallpaper.jpg);
+	z-index: -100;
+}
+.body {
+	width: 80%;
+	height: 90%;
+	background-color: rgba(173, 173, 0173, 0.6);
+	border-radius:5%;
+	margin-left: 20px;
+
 }
