--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,6 +1,5 @@
 <%= form_tag(controller: "songs", action: "create", method: "post") do %>
 	<%= text_field_tag(:song_title,"", placeholder:"Song title...", size: "24x6") %>
-	<%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
 	<% @categories.each do |category| %>
 		<%= radio_button_tag(:song_category, category.name ) %><%= label_tag(category.name) %>
 	<% end %>	
@@ -9,6 +8,9 @@
 	<%= check_box(:song_tag2, "Hard", {}, 'Hard', "no") %> <%= label_tag("Hard") %>
 	<%= check_box(:song_tag3, "Begginer", {}, 'Begginer', "no") %> <%= label_tag("Begginer") %>
 	<%= submit_tag("Submit") %>
+	<h1> Video & URL </h1>
+	<%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
+	<%= text_area_tag(:midi_link,"", placeholder:"Midi link...") %>
 <% end %>
 
 <%= render 'footer' %>
