--- a/app/views/instruments/_instrument.html.erb
+++ b/app/views/instruments/_instrument.html.erb
@@ -1,1 +1,5 @@
-<li><div><button><%= link_to instrument.name.capitalize, instrument_songs_path(instrument) %></button></div></li>
+<div class="row">
+	<div class="small-12 columns">
+		<div class="instrument_button"><button><%= link_to instrument.name.capitalize, instrument_songs_path(instrument) %></button></div>
+	</div>	
+</div>		
