--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,15 @@
       <div id="user_nav">
         <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path %> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %>
         <% elsif admin_signed_in? %>
           Logged in as <strong><%= current_admin.email %></strong>.
-          <%= link_to 'Edit profile', edit_admin_registration_path %> |
-          <%= link_to "Logout", destroy_admin_session_path, method: :delete %>
+          <%= link_to 'Edit profile', edit_admin_registration_path, class: "login" %> |
+          <%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "login" %>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path %> |
-          <%= link_to "Login", new_user_session_path %>
+          <%= link_to "Sign up", new_user_registration_path, html_options = {class: "login"} %> |
+          <%= link_to "Login", new_user_session_path, class: "login" %>
         <% end %>
       </div>
 
