more super cool css

--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,11 +1,11 @@
 <div class="body">
 	<div class="row">	
-		<div class="small-9 columns">
+		<div class="small-9 small-offset-4 columns">
 		<h1> MusicApp </h1>
 		</div>
 	</div>	
 	<div class="row">
-		<div class="small-9 colunms">
+		<div class="small-9 small-offset-5 colunms">
 			<% if flash[:notice] %>
 			    <div class="notice"><%= flash[:notice] %></div>
 			  <% end %>
