--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="body">
 	<div class="row">		
-		<div class="small-12 columns">
+		<div class="small-4 small-offset-4 columns">
 			<h1><%= @instrument.name.capitalize %> songs</h1>
 			<%= form_tag({controller: "songs", action: "found_songs"}, {method: :post}) do %>
 			<%= text_area_tag(:title,"", placeholder: "Buscar canción", size: "24x6") %>
@@ -10,7 +10,7 @@
 	</div>	
 
 	<div class="row">		
-		<div class="small-12 columns">
+		<div class="small-12  columns">
 			<ul>
 			<% @songs.each do |song| %>
 				<li><span><%= link_to song.title, instrument_song_path(@instrument, song) %></span></li>
