--- a/app/views/songs/found_songs.html.erb
+++ b/app/views/songs/found_songs.html.erb
@@ -1,7 +1,13 @@
-<ul>
-<% @songs.each do |song| %>
-	<li><%= link_to song.title, instrument_song_path(@instrument, song) %></li>
-<% end %>
-</ul>
+<div class="body">
+	<div class="row">
+		<div class="small-3 small-offset-4 columns"
+			<ul>
+			<% @songs.each do |song| %>
+				<li><%= link_to song.title, instrument_song_path(@instrument, song) %></li>
+			<% end %>
+			</ul>
+		</div>
+	</div>		
+</div>	
 
 <%= render 'footer' %>
