--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,15 +3,16 @@
 <body>
 	<div class="body">
 		<div class="row">
-	          <div class="small-12 columns">
+	          <div class="small-12 small-offset-1 columns">
 				<h1><%= @song.title.capitalize %> </h1>
 			  </div>
 		</div>	  	
 
 		<div class="row">
-			<div class="small-3 columns">
+			<div class="small-3 small-offset-1 columns">
 				<%= image_tag(@song.title+".jpg") %>
 			</div>
+			<div class="small-4 small-offset-6 columns"
 			<% @videos.each do |video| %>
 				<%= raw video.url %> <!-- El raw del principio hace que lo de dentro del delimitador
 				rails se convierta en código HTML -->
@@ -19,7 +20,7 @@
 		</div>	
 		<div class="row">
 			<% @midis.each do |midi| %>
-				<div class="small-12 columns">
+				<div class="small-4 small-offset-6 columns">
 					<audio src="/songs/<%= midi.url %>" controls preload />
 				</div>	
 			<% end %>	
