--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,10 +1,12 @@
-<div class="body">
+<div class='row'>
+<div class="small-10 small-offset-2 columns">
+<div class="try">
 	<div class="row">	
 		<div class="small-9 small-offset-4 columns">
 		<h1> MusicApp </h1>
 		</div>
 	</div>	
-	<div class="row">
+
 		<div class="small-9 small-offset-5 colunms">
 			<% if flash[:notice] %>
 			    <div class="notice"><%= flash[:notice] %></div>
@@ -14,14 +16,16 @@
 			
 		</div>
 	</div>
-	<div class="row">
-		
+	<div class="row boxi">
 			<%= render @instruments %>
 						
 	</div>	
 	<div class="row">
 		<div class="small-2 small-offset-1 columns">
+
 			<%= button_to('Add instrument', new_instrument_path, method: :get) %>
 		</div>	
 	</div>			
 </div>	
+</div>
+</div>
