almost finished (style)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,5 +30,8 @@
    </div> 
   <!-- </div> 
  -->
+ <div class="foot">
+ <p> MusicApp&reg;, developed with love and patience </p>
+ </div>
 </body>
 </html>
