--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -145,9 +145,9 @@ a.login:hover {
 .foot{
 	color: white !important;
 	width: 100%;
-	height: 50px;
+	height: 30px;
 	bottom: 0;
-	position: absolute;
+	position: fixed;
 	background: #4c4c4c; /* Old browsers */
 	background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 2%, #595959 2%, #666666 4%, #666666 4%, #000000 22%, #000000 24%, #000000 57%, #111111 73%, #111111 73%, #111111 79%, #111111 79%, #1c1c1c 91%, #2b2b2b 100%, #131313 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4c4c4c), color-stop(2%,#595959), color-stop(2%,#595959), color-stop(4%,#666666), color-stop(4%,#666666), color-stop(22%,#000000), color-stop(24%,#000000), color-stop(57%,#000000), color-stop(73%,#111111), color-stop(73%,#111111), color-stop(79%,#111111), color-stop(79%,#111111), color-stop(91%,#1c1c1c), color-stop(100%,#2b2b2b), color-stop(100%,#131313)); /* Chrome,Safari4+ */
