--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -12,12 +12,13 @@
 			<div class="small-3 small-offset-1 columns">
 				<%= image_tag(@song.title+".jpg") %>
 			</div>
-			<div class="small-4 small-offset-6 columns"
+			
 			<% @videos.each do |video| %>
-				<%= raw video.url %> <!-- El raw del principio hace que lo de dentro del delimitador
-				rails se convierta en código HTML -->
+			
+				<%= raw video.url %> 
+			
 			<% end %>
-		</div>	
+			
 		<div class="row">
 			<% @midis.each do |midi| %>
 				<div class="small-4 small-offset-6 columns">
