--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -31,7 +31,7 @@
 
 
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
-
+<%= button_to('Comment', new_instrument_song_comment_path(@instrument.id, @song.id), method: :get) %>
 <ul>
 <% @comments.each do |comment| %>
 <li><%= comment.content %></li>
