--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -35,15 +35,16 @@ audio {
 	height: 		60px;
 	margin-top: 	25px;
 	/*margin-left: 536px;*/
-	padding-bottom: 10px;
+	padding-bottom: 	10px;
 }
 .row {
-	max-width: 999999px;
+	max-width: 			999999px;
 }
 body {
-	background-image: url(/images/wallpaper1.jpg);
+	/*background-image: url(/images/wallpaper1.jpg);*/
 	z-index: 			-100;
 	background-size: 	100%;
+	background-color: 	#D0EEED;
 
 }
 .body {
@@ -62,7 +63,7 @@ body {
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius:		10px;
 	margin-left: 		20px;
-	margin-top: 		50px;
+	margin-top: 		70px;
 }
 textarea {
 	width: 				300px;
@@ -115,11 +116,11 @@ label {
 
 
 a.login{
-	color: 				green;
+	color: 				#D0EEED;
 }
 
 a.login:hover {
-	color: 				blue;
+	color: 				#17A9A4;
 }
 
 
@@ -143,18 +144,22 @@ a.login:hover {
 	/*no se si dar estilo o no
 	a la barra de navegación*/
 }
-.foot{
+
+
+.topbar {
+
 	color: white !important;
 	width: 100%;
-	height: 30px;
-	bottom: 0;
+	height: 40px;
+	top: 0;
 	position: fixed;
-	background: #4c4c4c; /* Old browsers */
-	background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 2%, #595959 2%, #666666 4%, #666666 4%, #000000 22%, #000000 24%, #000000 57%, #111111 73%, #111111 73%, #111111 79%, #111111 79%, #1c1c1c 91%, #2b2b2b 100%, #131313 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4c4c4c), color-stop(2%,#595959), color-stop(2%,#595959), color-stop(4%,#666666), color-stop(4%,#666666), color-stop(22%,#000000), color-stop(24%,#000000), color-stop(57%,#000000), color-stop(73%,#111111), color-stop(73%,#111111), color-stop(79%,#111111), color-stop(79%,#111111), color-stop(91%,#1c1c1c), color-stop(100%,#2b2b2b), color-stop(100%,#131313)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #4c4c4c 0%,#595959 2%,#595959 2%,#666666 4%,#666666 4%,#000000 22%,#000000 24%,#000000 57%,#111111 73%,#111111 73%,#111111 79%,#111111 79%,#1c1c1c 91%,#2b2b2b 100%,#131313 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #4c4c4c 0%,#595959 2%,#595959 2%,#666666 4%,#666666 4%,#000000 22%,#000000 24%,#000000 57%,#111111 73%,#111111 73%,#111111 79%,#111111 79%,#1c1c1c 91%,#2b2b2b 100%,#131313 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #4c4c4c 0%,#595959 2%,#595959 2%,#666666 4%,#666666 4%,#000000 22%,#000000 24%,#000000 57%,#111111 73%,#111111 73%,#111111 79%,#111111 79%,#1c1c1c 91%,#2b2b2b 100%,#131313 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #4c4c4c 0%,#595959 2%,#595959 2%,#666666 4%,#666666 4%,#000000 22%,#000000 24%,#000000 57%,#111111 73%,#111111 73%,#111111 79%,#111111 79%,#1c1c1c 91%,#2b2b2b 100%,#131313 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
+	background: #7B8282; /* Old browsers */
+	
+
+}
+
+span{
+	float: right;
+	padding-right: 10px;
+
 }
