--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -3,6 +3,7 @@ h1 {
 	/*margin-top: 50px;*/
 	/*padding-left: 650px;*/
 	padding-top: 	20px;
+	z-index: -50;
 }
 
 h2{
@@ -45,16 +46,19 @@ body {
 	z-index: 			-100;
 	background-size: 	100%;
 	background-color: 	#D0EEED;
+	overflow: hidden;
 
 }
 .body {
-	width: 				90%;
-	max-height: 		80%;
+	width: 				96%;
+	height: 			600px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius:		10px;
 	margin-left: 		20px;
 	margin-top: 		50px;
 	padding-bottom:		30px;
+	overflow: 			auto;
+	overflow-x: 		hidden;
 
 }
 .try{
@@ -147,7 +151,7 @@ a.login:hover {
 
 
 .topbar {
-
+	z-index: 10;
 	color: white !important;
 	width: 100%;
 	height: 40px;
