--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path, html_options = {class: "login"} %> |
-          <%= link_to "Login", new_user_session_path, class: "login" %>
+          <%= link_to "Login", new_user_session_path, class: "login" %> |
+           <%= link_to'Home', root_path, method: :get, class: 'home' %>
         <% end %>
+
         <span> MusicApp&reg;, developed with love and patience </span>
 
       </div>
