--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -31,6 +31,6 @@
 <%= button_to('Comment', new_instrument_song_comment_path(@instrument.id, @song.id), method: :get) %>
 <ul>
 <% @comments.each do |comment| %>
-	<li><%= comment.content %></li>
+	<li><%= comment.content %> <%= link_to 'Edit', edit_instrument_song_comment_path(@instrument.id, @song.id, comment.id) %> <%= link_to 'Delete', instrument_song_comment_path(@instrument.id, @song.id, comment.id), method: :delete %></li>
 <% end %>
 </ul>
