--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,14 @@
           Logged in as <strong><%= current_user.email %></strong>.
           <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %>
+           <%= link_to'Home', root_path, method: :get, class: 'home' %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path, html_options = {class: "login"} %> |
           <%= link_to "Login", new_user_session_path, class: "login" %> |
            <%= link_to'Home', root_path, method: :get, class: 'home' %>
         <% end %>
 
-        <span> MusicApp&reg;, developed with love and patience </span>
+        <span class="topbarlogo"> MusicApp&reg;, developed with love and patience </span>
 
       </div>
       </div>
