--- a/app/views/instruments/_instrument.html.erb
+++ b/app/views/instruments/_instrument.html.erb
@@ -1,5 +1,5 @@
 
 	<div class="small-2 columns ">
-		<div class="instrument_button"><button><%= link_to instrument.name.capitalize, instrument_songs_path(instrument) %></button></div>
+		<div class="instrument_button"><button><%= link_to image_tag("g3088(1).jpg", :border=>0), instrument_songs_path(instrument) %></button></div>
 	</div>	
 	
