--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
           <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %>|
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %>
            <%= link_to'Home', root_path, method: :get, class: 'home' %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path, html_options = {class: "login"} %> |
