--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -28,9 +28,9 @@
 
 
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
-<%= button_to('Comment', new_instrument_song_comment_path(@instrument.id, @song.id), method: :get) %>
+<%= button_to('Comment', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
 <ul>
 <% @comments.each do |comment| %>
-	<li><%= comment.content %> <%= link_to 'Edit', edit_instrument_song_comment_path(@instrument.id, @song.id, comment.id) %> <%= link_to 'Delete', instrument_song_comment_path(@instrument.id, @song.id, comment.id), method: :delete %></li>
+	<li><%= comment.content %> <%= link_to 'Edit', edit_instrument_song_comment_path(@instrument.slug, @song.slug, comment.id) %> <%= link_to 'Delete', instrument_song_comment_path(@instrument.slug, @song.slug, comment.id), method: :delete %></li>
 <% end %>
 </ul>
