Add filter to comments

--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -8,8 +8,8 @@
 	</div>	
 
 		<div class="small-9 small-offset-5 colunms">
-			<% if flash[:notice] %>
-			    <div class="notice"><%= flash[:notice] %></div>
+			<% if flash[:alert] %>
+			    <div class="notice"><%= flash[:alert] %></div>
 			  <% end %>
 			
 			
