--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,4 +1,4 @@
-<div class="body">
+<div class="body3 small-offset-3 columns">
 <h3>Song title</h3>
 <%= form_tag(controller: "songs", action: "create", method: "post") do %>
 	<%= text_field_tag(:song_title,"", placeholder:"Song title...", size: "24x6") %>
