--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -24,7 +24,9 @@
 			<br>
 			<br>
 			<br>
-			
+			<% if current_user && current_user.has_role?(:admin) %>
+				<%= button_to('Delete instrument', instrument_path(@instrument.id), method: :delete) %>
+			<% end %>	
 		</div>
 	</div>		
 </div>	
