--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -29,11 +29,15 @@
 
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
 <%= button_to('Comment', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
-<ul>
+
 <% @comments.each do |comment| %>
-	<li><%= comment.content %> 
-	<% if comment.user == current_user %>
-	<%= link_to 'Edit', edit_instrument_song_comment_path(@instrument.slug, @song.slug, comment.id) %> <%= link_to 'Delete', instrument_song_comment_path(@instrument.slug, @song.slug, comment.id), method: :delete %></li>
-	<% end %>
+<div>
+	<div><%= comment.user.email %> said:</div>
+	<div><%= comment.content %></div>
+	<div>Published: <%= comment.created_at %> | Last update: <%= comment.updated_at %>
+		<% if comment.user == current_user %>
+			<%= link_to 'Edit', edit_instrument_song_comment_path(@instrument.slug, @song.slug, comment.id) %> <%= link_to 'Delete', instrument_song_comment_path(@instrument.slug, @song.slug, comment.id), method: :delete %></li>
+		<% end %>
+	</div>
+</div>
 <% end %>
-</ul>
