--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -31,13 +31,15 @@
 <%= button_to('Comment', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
 
 <% @comments.each do |comment| %>
-<div>
-	<div><%= comment.user.email %> said:</div>
-	<div><%= comment.content %></div>
-	<div>Published: <%= comment.created_at %> | Last update: <%= comment.updated_at %>
+<div style="border: 1px solid black">
+	<div style="border: 1px solid black"><%= comment.user.email %> said:</div>
+	<div style="border: 1px solid black"><%= comment.content %></div>
+	<div style="border: 1px solid black">Published: <%= comment.created_at %> | Last update: <%= comment.updated_at %>
 		<% if comment.user == current_user %>
 			<%= link_to 'Edit', edit_instrument_song_comment_path(@instrument.slug, @song.slug, comment.id) %> <%= link_to 'Delete', instrument_song_comment_path(@instrument.slug, @song.slug, comment.id), method: :delete %></li>
 		<% end %>
 	</div>
 </div>
+<br>
+<br>
 <% end %>
