--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -124,16 +124,8 @@ a{
 button{
 	margin-top: 		80px;
 	border-radius: 		10px;
-	background: #f1e767; /* Old browsers */
-	background: -moz-linear-gradient(top, #f1e767 0%, #feb645 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f1e767), color-stop(100%,#feb645)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #f1e767 0%,#feb645 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #f1e767 0%,#feb645 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #f1e767 0%,#feb645 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #f1e767 0%,#feb645 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#feb645',GradientType=0 ); /* IE6-9 */
+	background-color: 	#D0EEED;
 }
-
 input {
 	background-color: white; 
 	border-radius: 		10px;
@@ -219,37 +211,40 @@ a.home:hover {
 #flash_alert{
 	color: 				red;
 	font-weight: 		bold;
-	font-size: 			50px;
-	margin-top: 		90px;
+	font-size: 			20px;
+	margin-top: 		60px;
 } 
-/*#flash_notice {
+#flash_notice {
 	color: 				red;
 	font-weight:		bold;
-	font-size: 			50px;*/
+	font-size: 			20px;
 
 }
 
 #user_nav {
 	/*no se si dar estilo o no
 	a la barra de navegación*/
+	float: right;
+	padding-right: 10px;
 }
 
 
 .topbar {
-	z-index: 10;
-	color: white !important;
-	width: 100%;
-	height: 40px;
-	top: 0;
-	position: fixed;
-	background: #7B8282; /* Old browsers */
+	z-index: 		10;
+	color: 			white !important;
+	width: 			100%;
+	height: 		40px;
+	top: 			0;
+	position: 		fixed;
+	background: 	#7B8282; 
 	
 
 }
 
 .topbarlogo{
-	float: right;
-	padding-right: 10px;
+	float: 				left;
+	padding-left: 		10px;
+	
 
 }
 .home {
