Can include images in music sheet tag

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -14,10 +14,12 @@
 	<%= check_box(:song_tag1, "Cool", {}, 'Cool', "no") %> <%= label_tag("Cool") %>
 	<%= check_box(:song_tag2, "Hard", {}, 'Hard', "no") %> <%= label_tag("Hard") %>
 	<%= check_box(:song_tag3, "Begginer", {}, 'Begginer', "no") %> <%= label_tag("Begginer") %>
-	<%= submit_tag("Submit") %>
 	<h4> Video & URL </h4>
 	<%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
 	<%= text_area_tag(:midi_link,"", placeholder:"Midi link...") %>
+
+	<%= file_field_tag :music_sheet %>
+	<%= submit_tag("Submit") %>
 <% end %>
 </div>
 
