--- a/app/views/instruments/_instrument.html.erb
+++ b/app/views/instruments/_instrument.html.erb
@@ -1,6 +1,7 @@
 
-	<div class="small-2 columns ">
-		<div class="instrument_button"><button><%= link_to image_tag((instrument.name+".png"), :border=>0, class: "instrument_img"), instrument_songs_path(instrument) %></button></div>
+	
+		<div class="instrument_button small-2 columns"><button><%= link_to image_tag((instrument.name+".png"), :border=>0, class: "instrument_img"), instrument_songs_path(instrument) %></button>
+		</div>
 
-	</div>	
+
 	
