--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -7,7 +7,7 @@
 
 		<div class="row">
 			<div class="small-3 small-offset-1 columns">
-				<%= image_tag((@song.title+".jpg"), class: 'sheet') %>
+				<%= image_tag(@song.music_sheets.url, class: 'sheet') %>
 			</div>
 			
 			<% @videos.each do |video| %>
