Trying to get images, and add Spotify widget

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -26,6 +26,7 @@
 
 	</div>	
 
+<iframe src="https://embed.spotify.com/?uri=spotify:track:0ShZidyBdeUF00b4ontvom" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
 <%= button_to('Comment', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
