--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -30,3 +30,7 @@
 </div>	
 </div>
 </div>
+
+<embed src="/flash/clockdig.swf" width="160" height="40" play="true" 
+loop="true" quality="high" > 
+</embed> 
