--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,5 @@
+	<script src='/assets/jquery.transit.min.js'></script>
+	<script src="/assets/toggle.js"></script>
 	<div class="body">
 		<div class="row">
 	          <div class="small-12 small-offset-1 columns">
@@ -5,10 +7,13 @@
 			  </div>
 		</div>	  	
 
+		
+				<div id="music_sheet" class='sheet'>
+					<%= image_tag((@song.title+".jpg")) %>
+				</div>
+		
 		<div class="row">
-			<div class="small-3 small-offset-1 columns">
-				<%= image_tag((@song.title+".jpg"), class: 'sheet') %>
-			</div>
+
 			
 			<% @videos.each do |video| %>
 			
