--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,6 +1,6 @@
 <div class="body3 small-offset-3 columns">
   <h3>Song title</h3>
-    <%= form_tag(controller: "songs", action: "create", method: "post") do %>
+    <%= form_tag(controller: "songs", action: "create", method: "post", multipart: true) do %>
       <%= text_field_tag(:song_title,"", placeholder:"Song title...", size: "24x6") %>
       <% @categories.each do |category| %>
         <%= radio_button_tag(:song_category, category.name ) %><%= label_tag(category.name) %>
