--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,9 +1,9 @@
 <div class='row'>
 <div class="small-10 small-offset-2 columns">
-<div class="try">
+<!-- <div class="try"> -->
 	<div class="row">	
-		<div class="small-9 small-offset-4 columns">
-		<h1> MusicApp </h1>
+		<div class="small-9 small-offset-3 columns">
+		<p><img src="/images/logo3.png" class="logo"/></p>
 		</div>
 	</div>	
 
@@ -15,7 +15,7 @@
 			
 			
 		</div>
-	</div>
+	<!-- </div> -->
 	<div class="row boxi">
 			<%= render @instruments %>			
 	</div>	
