--- a/app/views/songs/found_songs.html.erb
+++ b/app/views/songs/found_songs.html.erb
@@ -1,7 +1,7 @@
-<div class="body">
+<div class="body5 small-offset-3 columns">
 	<div class="row">
-		<div class="small-3 small-offset-4 columns">
-			<ul>
+		<div class="small-6 columns">
+			<ul class="found_songs">
 			<% @songs.each do |song| %>
 				<li><%= link_to song.title, instrument_song_path(@instrument, song) %></li>
 			<% end %>
