--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(controller: "comments", action: "update", method: "put") do %>
+<%= form_tag(instrument_song_comment_path(params[:instrument_id], params[:song_id], @comment.id), method: "put") do %>
 	<%= text_area_tag(:content, @comment.content, placeholder:"What do you think?...", size: "24x12") %>
 	<%= submit_tag('Submit', method: :put) %>
 <% end %>
